<resources>

    <string name="app_name">MediSeed</string>

    <!--main-->
    <string name="main_tab_sprout_title">새싹이</string>
    <string name="main_tab_home_title">홈</string>
    <string name="main_tab_mypage_title">보관함</string>
    <string name="main_click_error">해당 위치를 표시할 수 없습니다.</string>

    <!--SproutFragment-->
    <string name="sprout_pill_button">약 버리기</string>
    <string name="sprout_share_button">공유 하기</string>
    <string name="sprout_bottom_text">약 버리기는 수거함 근처에서만 가능합니다.</string>
    <string name="sprout_level_text">레벨</string>
    <string name="sprout_level_up_text">LEVEL UP!</string>
    <string name="sprout_progress_up_text">야호 물이다!</string>
    <string name="sprout_tree_text">그루</string>
    <string name="sprout_pill_button_toast">하루에 한 번만 가능합니다.</string>
    <string name="sprout_share_button_toast">하루에 세 번만 가능합니다.</string>
    <string name="sprout_share_message">폐의약품 수거함은 MediSeed에서 확인할 수 있습니다!</string>
    <string name="sprout_share_title">앱 공유하기</string>
    <string name="sprout_distance_toast">수거함이 너무 멀리 있습니다.</string>
    <string name="sprout_location_toast">현재 위치를 가져오지 못했습니다.</string>
    <string name="sprout_pill_location_toast">수거함 위치를 가져오지 못했습니다.</string>
    <string name="sprout_tree_dialog_bottom_text">축하드립니다! 나무가 하나 더 자랐습니다.</string>
    <string name="sprout_tree_dialog_title_text">나무가 다 자랐어요!</string>
    <string name="sprout_tree_dialog_button_text">또 키우러 가기</string>
    <string name="sprout_name_dialog_text">이름 변경</string>
    <string name="sprout_name_dialog_edit_text">새 이름을 입력하세요</string>
    <string name="sprout_button_confirm">확인</string>
    <string name="sprout_button_cancel">취소</string>

    <!--HomeFragment-->
    <string name="location_permission_granted">위치권한이 허용되었습니다.</string>
    <string name="location_permission_required">권한을 허용해야 앱을 이용할 수 있습니다.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--StorageFragment-->
    <string name="item_kind">약국</string>
    <string name="storage_return_medicine">내가 처리한 폐의약품은</string>
    <string name="storage_sharing">지금까지 공유한 횟수는</string>
    <string name="facility_name">새싹 약국</string>
    <string name="facility_address">대전 나무로 초목로 4길 86</string>
    <string name="storage_medicine_count">0</string>
    <string name="storage_sharing_count">0</string>
    <string name="storage_activity">내 활동 &amp; 보관함</string>
    <string name="storage_medicine_piece">개에요</string>
    <string name="storage_sharing_times">번이에요</string>

    <!--BottomSheetFragment-->
    <string name="fetch_error">일시적으로 데이터를 가져올 수 없습니다.</string>

</resources>